# fw-anwesenheit

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  buzzer.py  em4100_write.lua  fwa.service  pm3_mock.sh  used_ids.txt
.cargo/: config.toml
3d_print/: Gehause.3mf  LWL.3mf  Proxmark_halter.3mf  enclouseure_printfile.3mf  enclousure_top_ffw.3mf
3d_print/printfiles/: fw-anwesenheit-enclousure-top.3mf
doc/: Sequence_diagram.wsd
pcb/: fp-info-cache  fw-anwesenheit.kicad_pcb  fw-anwesenheit.kicad_prl  fw-anwesenheit.kicad_pro  fw-anwesenheit.kicad_sch
pcb/bom/: ibom.html
pcb/fw-anwesenheit/: fw-anwesenheit.kicad_pcb  fw-anwesenheit.kicad_prl  fw-anwesenheit.kicad_pro  fw-anwesenheit.kicad_sch
pcb/production/: bom.csv  designators.csv  fw-anwesenheit-B_Cu.gbl  fw-anwesenheit-B_Mask.gbs  fw-anwesenheit-B_Paste.gbp  fw-anwesenheit-B_Silkscreen.gbo  fw-anwesenheit-Edge_Cuts.gm1  fw-anwesenheit-F_Cu.gtl  fw-anwesenheit-F_Mask.gts  fw-anwesenheit-F_Paste.gtp  fw-anwesenheit-F_Silkscreen.gto  fw-anwesenheit-In1_Cu.g1  fw-anwesenheit-In2_Cu.g2  fw-anwesenheit-In3_Cu.g3  fw-anwesenheit-In4_Cu.g4  fw-anwesenheit-NPTH-drl_map.gbr  fw-anwesenheit-NPTH.drl  fw-anwesenheit-PTH-drl_map.gbr  (+3 more)
pre-compiled/: proxmark3
service/: fwa-fail.service  fwa.env  fwa.service
src/: buzzer.rs  color.rs  drivers.rs  feedback.rs  fw-anwesenheit.service  gpio_buzzer.rs  hardware.rs  hotspot.rs  id_store.rs  init.rs  led.rs  logger.rs  main.rs  mock.rs  parser.rs  pm3.rs  spi_led.rs  tally_id.rs  webserver.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
(+41 files in other folders)
